Fixed logi and sign up modals in menu and aligned left and added hover effect

--- a/frontend/src/components/LoginFormModal/LoginModal.css
+++ b/frontend/src/components/LoginFormModal/LoginModal.css
@@ -9,6 +9,9 @@
 /* on drop down menu */
 .Login-menu {
     font-weight: bold;
+    cursor: pointer;
+    margin: 0;
+    font-size: 14;
 }
 
 
