--- a/frontend/src/components/SignUpFormModal/SignupForm.css
+++ b/frontend/src/components/SignUpFormModal/SignupForm.css
@@ -4,7 +4,11 @@
     font-family: sans-serif;
 }
 
-
+/* Drop down menu*/
+.SignUp-menu {
+    margin: 0;
+    font-size: 14;
+}
 
 .signup-header {
     display: flex;
